# YPP_Flag_Shoppes

./: .gitignore  CMakeLists.txt  README.md
include/: DownloadURL.h  SplitString.h  TrimString.h  Write_Data.h  biz.h  bizdb.h  crew.h  flag.h  pirate.h  ypp_page.h
libcurl/lib/: libcurl.exp  libcurl.lib
src/: DownloadURL.cpp  SplitString.cpp  TrimString.cpp  Write_Data.cpp  biz.cpp  bizdb.cpp  crew.cpp  flag.cpp  main.cpp  pirate.cpp  ypp_page.cpp
